fix: improper spacing and alignment

--- a/src/components/ProjectShowcase.module.css
+++ b/src/components/ProjectShowcase.module.css
@@ -17,6 +17,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 8px 0;
   max-width: 450px;
   height: auto;
   position: relative;
@@ -68,7 +69,7 @@
   flex-wrap: wrap;
   justify-content: center;
   opacity: 0.8;
-  margin-bottom: 1em;
+  margin: 8px 0;
   gap: 0.5em;
 }
 
@@ -78,7 +79,7 @@
   justify-content: center;
 
   gap: 1em;
-  padding: 1em;
+  padding: 1em 0;
 }
 
 @media screen and (min-width: 1100px) {
